--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "netlify-lambda": "^1.6.3"
   },
   "devDependencies": {},
